Fix social media icons alignment on mobile

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 .fa {
-    padding: 20px 25px;
+    padding: 20px 50px 20px 0px;
     font-size: 30px;
     width: 30px;
     text-align: center;
